weight/route-by-weight.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
  - reviews
  http:
  - route:
    - destination:
        host: reviews
        subset: v1
        port:
          number: 9080
      weight: 50
    - destination:
        host: reviews
        subset: v2
        port:
          number: 9080
      weight: 50
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: reviews-destination
spec:
  host: reviews
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN   # <-- This enables round-robin
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
